--- a/.github/workflows/prueba1.yml
+++ b/.github/workflows/prueba1.yml
@@ -11,3 +11,4 @@ jobs:
       - uses: actions/checkout@v4
       - name: My first secret
         run: echo ${{ secrets.MY_SECRET }}
+             echo ${{ secrets.MY_SECRET_2 }}
